--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -10,6 +10,8 @@
   z-index: 10;
   z-index: 5000;
   width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 .nav-menu a, .nav-menu a i[id='icon-cart'] {
